# koleo-mcp

./: .gitignore  README.md  client.py  config.py  errors.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
docs/plans/: 2026-02-27-koleo-mcp-design.md  2026-02-27-koleo-mcp-implementation.md
formatters/: board.py  connections.py  trains.py
tests/: test_client_ssl.py
tools/: board.py  connections.py  realtime.py  seats.py  stations.py  trains.py
